# rag-aegra

./: .gitignore  README.md
backend/: aegra.json  docker-compose.yml  pyproject.toml
backend/src/: custom_routes.py  db_utils.py  vector_collections.py
backend/src/backend/: __init__.py  context.py  graph.py  prompts.py  state.py  utils.py
frontend/: package-lock.json
frontend/src/components/thread/: index.tsx
frontend/src/components/thread/history/: index.tsx
frontend/src/providers/: Stream.tsx  Thread.tsx
